--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ img:hover {
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 .column {
-  display = inline-block
-  width = 
+  display: inline-block;
+  width: 48%;
 }
 
 /* create your tile classes! we recommend .small .med .large */
